--- a/style.css
+++ b/style.css
@@ -23,18 +23,19 @@ body {
 .header,
 .footer {
     flex: 0;
-    color: #F9FAF8;
     background-color: #1F2937;
 }
 
 .header {
     display: flex;
     align-items: center;
+    color: #F9FAF8;
 }
 .footer {
     display: flex;
     justify-content: center;
     align-items: center;
+    color:#E5E7EB;
 }
 .footer > * {
     padding: 10px;
@@ -51,6 +52,7 @@ ul {
     display: flex;
     justify-content: center;
     gap: 10px;
+    color:#E5E7EB;
 }
 
 .lower-middle {
@@ -83,13 +85,14 @@ ul {
     padding: 15px 70px;
     display: flex;
     border-radius: 10px;
-    color: #F9FAF8;
+    color:#E5E7EB;
     gap: 10px;
     justify-content: space-between;
 }
 
 .lower-text .heading {
     font-weight: bold;
+    color: #F9FAF8;
 }
 .lower-text {
     flex: 1;
@@ -121,6 +124,9 @@ button {
     display: flex;
     padding: 50px 15%;
 }
+.upper-content > img {
+    background-color: gray;
+}
 
 .upper-content > * {
     flex: 1;
@@ -145,5 +151,35 @@ button {
     border: none;
     align-self: flex-start;
     margin-left: 0px;
+    margin-top: 10px;
 
+}
+
+.upper-middle {
+    flex-direction: column;
+    margin: 30px 20%;
+}
+.upper-middle-panes {
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+.upper-middle-pane {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
+
+.upper-middle-pane > img {
+    width: 100px;
+    height: 100px;
+    border: 2px solid #3882F6;
+    border-radius: 9px;
+}
+
+button {
+    flex-shrink: 0;
 }
