--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     margin: 0;
     font-family: Roboto, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+a {
+    text-decoration: none;
+    color: inherit;
+}
 
 .content {
     display: flex;
