Round img corners, make button cursor pointer

--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ a {
     color: inherit;
 }
 
+button {
+    cursor: pointer;
+}
+
+img {
+    border-radius: 30px;
+}
 .content {
     display: flex;
     flex: 1;
