--- a/style.css
+++ b/style.css
@@ -13,23 +13,33 @@ a {
 
 button {
     cursor: pointer;
+    flex-shrink: 0;
+    margin: 30px;
+    background-color: #3882F6;
+    border-radius: 5px;
+    color: inherit;
+    border: 2px solid #F9FAF8;
+    padding: 3px 12px;
 }
 
 img {
     border-radius: 30px;
 }
-.content {
-    display: flex;
-    flex: 1;
-    flex-direction: column;
-}
-.content > * {
-    flex:1;
+
+h2 {
     display: flex;
     justify-content: center;
-    align-items: center;
-    width: 100;
 }
+
+ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    color:#E5E7EB;
+}
+
+/** HEADER/HERO TEXT AND FOOTER*/
 
 .header,
 .footer {
@@ -54,98 +64,43 @@ img {
 .header > * {
     flex: 1;
 }
-h2 {
-    display: flex;
-    justify-content: center;
-}
-ul {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-    color:#E5E7EB;
-}
 
-.lower-middle {
+/* CONTENT */
+
+.content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+}
+.content > * {
+    flex:1;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #E5E7EB;
-    padding: 100px;
-}
-.lower-middle-content {
-    padding-left: 20%;
-    padding-right: 20%;
-    display: flex;
-    flex-direction: column;
-}
-.lower-middle-content > .quote {
-    font: 36px italic;
-    /* FIXME: find some way to make this font lighter */
-    color:#1F2937;
-}
-.lower-middle-source {
-    align-self: flex-end;
-    font-weight: bold;
+    width: 100;
 }
 
-.lower > div {
-    background-color: #3882F6;
-    width: 60%;
-    margin: 60px;
-    padding: 15px 70px;
-    display: flex;
-    border-radius: 10px;
-    color:#E5E7EB;
-    gap: 10px;
-    justify-content: space-between;
-}
-
-.lower-text .heading {
-    font-weight: bold;
-    color: #F9FAF8;
-}
-.lower-text {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-button {
-    margin: 30px;
-    background-color: #3882F6;
-    border-radius: 5px;
-    color: inherit;
-    border: 2px solid #F9FAF8;
-    padding: 3px 12px;
-    
-}
+/** UPPER PANE */
 
 .upper {
     background-color: #1F2937;
-    font-size: 24px;
     color: #F9FAF8;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 30px;
 }
 
 .upper-content {
     display: flex;
-    padding: 50px 15%;
-}
-.upper-content > img {
-    background-color: gray;
+    padding: 75px 15%;
 }
 
-.upper-content > * {
-    flex: 1;
-}
 .upper-content-left {
     display: flex;
     flex-direction: column;
     padding: 30px;
+    min-width: 20em;
+    flex: 1 0 0;
 }
 
 .upper-content-left > h1 {
@@ -166,6 +121,7 @@ button {
 
 }
 
+/** UPPER MIDDLE PANE */
 .upper-middle {
     flex-direction: column;
     margin: 30px 20%;
@@ -191,6 +147,53 @@ button {
     border-radius: 9px;
 }
 
-button {
-    flex-shrink: 0;
+/* LOWER MIDDLE CONTENT PANE */
+
+.lower-middle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #E5E7EB;
 }
+
+
+.lower-middle-content {
+    padding: 100px 20%;
+    display: flex;
+    flex-direction: column;
+}
+.lower-middle-content > .quote {
+    font: 36px italic;
+    color:#1F2937;
+    opacity: 0.8;
+}
+.lower-middle-source {
+    align-self: flex-end;
+    font-weight: bold;
+}
+
+/* LOWER CONTENT PANE */
+
+.lower > div {
+    background-color: #3882F6;
+    width: 60%;
+    margin: 60px;
+    padding: 15px 70px;
+    display: flex;
+    border-radius: 10px;
+    color:#E5E7EB;
+    gap: 10px;
+    justify-content: space-between;
+}
+
+.lower-text .heading {
+    font-weight: bold;
+    color: #F9FAF8;
+}
+.lower-text {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
